# SuikaiLauncher.Core

./: .gitignore  LICENSE  README.md  SuikaiLauncher.Core.sln  pyproject.toml  resources.json
.github/workflows/: codeql.yml
SuikaiLauncher.Core/: SuikaiLauncher.Core.csproj
SuikaiLauncher.Core.Account/: SuikaiLauncher.Core.Account.csproj
SuikaiLauncher.Core.Account/Modules/: Custom.cs  Microsoft.cs  MinecraftYggdrasil.cs  Model.cs  Offline.cs  Profile.cs  Xbox.cs  Yggdrasil.cs  YggdrasilServer.cs
SuikaiLauncher.Core.Base/: SuikaiLauncher.Core.Base.csproj
SuikaiLauncher.Core.Base/Modules/: Exceptions.cs  FileIO.cs  Info.cs  Json.cs  Logger.cs  Maven.cs  Network.cs  Override.cs  PEReader.cs  Process.cs  Setup.cs  Source.cs  Win32.cs  time.cs
SuikaiLauncher.Core.Extensions/: SuikaiLauncher.Core.Extensions.csproj
SuikaiLauncher.Core.Extensions/Account/: Microsoft.cs
SuikaiLauncher.Core.Extensions/Link/: LinkLobby.cs
SuikaiLauncher.Core.Minecraft/: SuikaiLauncher.Core.Minecraft.csproj
SuikaiLauncher.Core.Minecraft/Modules/: Client.cs  Launch.cs  Models.cs  Source.cs  Version.cs
SuikaiLauncher.Core.Mod/: SuikaiLauncher.Core.Mod.csproj
SuikaiLauncher.Core.Mod/Modules/: Compare.cs  CurseForge.cs  ModData.cs  Model.cs  Modrinth.cs
SuikaiLauncher.Core.Modpack/: SuikaiLauncher.Core.Modpack.csproj
SuikaiLauncher.Core.Modpack/Modules/: Common.cs  MCBBS.cs  Modrinth.cs
SuikaiLauncher.Core.Modpack/Properties/: launchSettings.json
SuikaiLauncher.Core.Runtime/Modules/: Java.cs
SuikaiLauncher.Core.Subassembly/: SuikaiLauncher.Core.Subassembly.csproj
(+85 files in other folders)
